modifique arch js url cambiada

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <a href="https://www.buenosaires.gob.ar/taxis/tarifas" target="_blank">Acá</a> </h4>
 </div>
 
-    <script src="/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
